--- a/index.html
+++ b/index.html
@@ -3,15 +3,51 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>jQuery</title>
-        <script src="js/jquery-3.7.1.min.js"></script>
-        <script>
-            $(document).ready(function(){
-                $("h1").css("color","red");
-            });
-        </script>
+        <title>Home</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous">
     </head>
     <body>
-        <h1>Hello</h1>
+        <div id="root" class>
+            <nav id="main-nav"
+                class="navbar navbar-expand-sm bg-dark navbar-dark">
+
+                <div class="container-fluid">
+                    <!-- Logo -->
+                    <a href="/" class="navbar-brand" onclick="route()">DBlog</a>
+                    <!-- Link -->
+                    <ul class="navbar-nav ">
+                        <li class="nav-item ">
+                            <a class="nav-link active" href="/"
+                                onclick="route()">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/about"
+                                onclick="route()">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                                href="/contact"
+                                onclick="route()">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <div id="main-page">
+
+            </div>
+        </div>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+        <script src="js/router.js"></script>
+        <script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
